# models/modelcrud/users.delete.go
@@ -1,0 +1,114 @@
+// Code generated by SQLBoiler 4.6.0 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
+// This file is meant to be re-generated in place and/or deleted at any time.
+
+package modelcrud
+
+import (
+	"net/http"
+
+	"github.com/calebhiebert/go-vue-template/api"
+	"github.com/calebhiebert/go-vue-template/models"
+	"github.com/gin-gonic/gin"
+	"github.com/volatiletech/null/v8"
+	"github.com/volatiletech/sqlboiler/v4/boil"
+	"github.com/volatiletech/sqlboiler/v4/queries/qm"
+)
+
+// DeleteUserByID godoc
+// @Summary Soft deletes a single User entity based on their id
+// @Produce json
+// @Success 200 {object} APIUser
+// @Param id path string true "User id"
+// @Param hardDelete query string false "Hard delete user"
+// @Router /crud/users/:id [delete]
+func (*GeneratedCrudController) DeleteUserByID(c *gin.Context) {
+	id := c.Param("id")
+
+	if id == "" {
+		api.NewAPIError("invalid-id", http.StatusBadRequest, "The provided id was invalid").Respond(c)
+		return
+	}
+
+	hardDelete := c.Query("hardDelete") == "true"
+
+	existingUser, err := models.Users(qm.Where("id = ?", id)).OneG(c.Request.Context())
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	_, err = existingUser.DeleteG(c.Request.Context(), hardDelete)
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	c.JSON(http.StatusOK, existingUser)
+}
+
+// BulkDeleteUsersByIDs godoc
+// @Summary Soft deletes a range of users by their ids
+// @Produce json
+// @Success 200 {object} DeletedCount
+// @Param req body IDList true "List of ids to delete"
+// @Param hardDelete query string false "Hard delete user"
+// @Router /crud/users [delete]
+func (*GeneratedCrudController) BulkDeleteUsersByIDs(c *gin.Context) {
+
+	var ids IDList
+
+	err := c.BindJSON(&ids)
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	hardDelete := c.Query("hardDelete") == "true"
+
+	var idInterface []interface{}
+
+	for _, id := range ids.IDs {
+		idInterface = append(idInterface, id)
+	}
+
+	deleted, err := models.Users(qm.WhereIn("id IN ?", idInterface...)).DeleteAllG(c.Request.Context(), hardDelete)
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	c.JSON(http.StatusOK, DeletedCount{DeletedCount: int(deleted)})
+}
+
+// UnDeleteUserByID godoc
+// @Summary Undeletes a user by id
+// @Produce json
+// @Success 200 {object} APIUser
+// @Param id path string true "User id"
+// @Router /crud/users/:id/unDelete [post]
+func (*GeneratedCrudController) UnDeleteUserByID(c *gin.Context) {
+	id := c.Param("id")
+
+	if id == "" {
+		api.NewAPIError("invalid-id", http.StatusBadRequest, "The provided id was invalid").Respond(c)
+		return
+	}
+
+	deletedUser, err := models.Users(qm.Where("id = ?", id), qm.WithDeleted()).OneG(c.Request.Context())
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	deletedUser.DeletedAt = null.Time{
+		Valid: false,
+	}
+
+	_, err = deletedUser.UpdateG(c.Request.Context(), boil.Whitelist("deleted_at"))
+	if err != nil {
+		api.APIErrorFromErr(err).Respond(c)
+		return
+	}
+
+	c.JSON(http.StatusOK, deletedUser)
+}
